--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "snap-shot",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://hamza-sweid.github.io",
+  "homepage": "https://hamza-sweid.github.io/snapshot",
   "dependencies": {
     "-": "^0.0.1",
     "@emotion/react": "^11.10.0",
