--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "homepage": "https://hamza-sweid.github.io/snapshot",
   "dependencies": {
     "-": "^0.0.1",
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.8.4",
@@ -30,6 +32,16 @@
     "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "husky": "^7.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": ".husky/commit-msg",
+      "pre-commit": ".husky/pre-commit",
+      "pre-push": ".husky/pre-push"
+    }
   },
   "eslintConfig": {
     "extends": [
