--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "husky": "^7.0.0"
