--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "husky": {
     "hooks": {
       "commit-msg": ".husky/commit-msg",
-      "pre-commit": ".husky/pre-commit",
+      "pre-commit": "npm run lint",
       "pre-push": ".husky/pre-push"
     }
   },
